platform/infrastructure/controllers/ingress-nginx-network-policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: ingress-nginx-baseline
  namespace: ingress-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: controller
  ingress:
    - fromEntities:
      - world
      - cluster
  egress:
    - toEntities: [cluster, host, kube-apiserver]
